tdf#118549 crash on dialog teardown

only an issue for the current partially complete interim case

Change-Id: Iaf1ef4dabca1cdd5d2d90028edf5793cf45feb20
Reviewed-on: https://gerrit.libreoffice.org/57502
Tested-by: Jenkins
Reviewed-by: Eike Rathke <erack@redhat.com>